<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoesInfo">
    <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:id="@+id/DataImage" />
        </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:id="@+id/DataCategory"
        android:textColor="@color/MyfavouriteColor"
        android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:id="@+id/DataPrice"
            android:textColor="@color/MyfavouriteColor"
            android:textSize="20sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/made"
        android:textColor="@color/MyfavouriteColor"
        android:layout_marginTop="50sp"
        android:textSize="20sp"
        android:id="@+id/DataMade"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sizes"
            android:id="@+id/size"
            android:textColor="@color/MyfavouriteColor"
            android:textSize="25sp"/>
        <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:id="@+id/recyclersize"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colors"
                android:id="@+id/DataColors"
                android:textColor="@color/MyfavouriteColor"
                android:textSize="25sp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:id="@+id/recyclercolor"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/description"
            android:gravity="center_horizontal"
            android:textColor="@android:color/holo_blue_dark"
            />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:background="@drawable/bordertext"
        android:gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:id="@+id/DataDescription"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_shoes"
            android:textSize="25sp"
            android:id="@+id/BuyShoes"/>
    </LinearLayout>
</ScrollView>