<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_orange_light"
            android:inputType="textEmailAddress"
            android:text="@string/signup"
            android:gravity="center"
            android:textSize="45sp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/imagePhoto"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="35sp"
                android:text="@string/add_your_photo"
                android:drawableBottom="@drawable/ic_baseline_image_24"
                android:id="@+id/yourPhoto"
                android:textColor="#6C8BFA"
                android:textStyle="italic"/>
        </FrameLayout>
        <EditText
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="15"
            android:inputType="text"
            android:textColorHint="@android:color/black"

            android:hint="@string/name"/>
        <EditText
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:textColorHint="@android:color/black"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:id="@+id/Email"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:textColorHint="@android:color/black"
            android:inputType="text"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:id="@+id/TelNumber"
            android:layout_gravity="center"
            android:hint="@string/telnumber"
            android:textColorHint="@android:color/black"
            android:inputType="number"/>
        <Button
            android:id="@+id/Save"
            android:layout_marginTop="150sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Save"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="471dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/txt2"
                android:layout_centerInParent="true"
                android:textColor="@android:color/holo_blue_dark"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:progress="0"
            android:minWidth="100sp"
            android:max="100"
            android:id="@+id/progress"
            android:visibility="invisible"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>