<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Categories">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="250sp"
    android:id="@+id/men"
    />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ProgressMen"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/men"
        android:textColor="@color/MyfavouriteColor"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="500dp"
        android:layout_height="250sp"
        android:id="@+id/women" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ProgressWomen"
        android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/women"
        android:textColor="@color/MyfavouriteColor"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="500dp"
        android:layout_height="250sp"
        android:id="@+id/boy" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ProgressBoy"
        android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boy"
        android:textColor="@color/MyfavouriteColor"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="500dp"
        android:layout_height="250sp"
        android:id="@+id/girl" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ProgressGirl"
        android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/girl"
        android:textColor="@color/MyfavouriteColor"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="500dp"
        android:layout_height="250sp"
        android:id="@+id/baby" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ProgressBaby"
        android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baby"
        android:textColor="@color/MyfavouriteColor"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:id="@+id/batic" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ProgressBatik"
        android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batik"
        android:textColor="@color/MyfavouriteColor"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"/>
</LinearLayout>
</ScrollView>