<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/my_drawer_layout"
    android:layout_height="match_parent"
    tools:context=".SignAndLogin">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_gravity="center"
        android:src="@drawable/amalshoes" />
    <EditText
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:id="@+id/email_login"
        android:textSize="20sp"
        android:drawableEnd="@drawable/ic_baseline_email_24"
        android:textColorHint="@android:color/holo_orange_light"
        />
    <EditText
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:drawableEnd="@drawable/ic_eye_24"
        android:inputType="textPassword"
        android:id="@+id/password_login"
        android:textSize="20sp"
        android:textColorHint="@android:color/holo_orange_light"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signin"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        android:id="@+id/SignIn"
        android:textSize="20sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/txt"
                android:layout_centerInParent="true"
                android:textColor="@android:color/holo_blue_dark"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/prog_signin"
        android:progress="0"
        android:minWidth="100sp"
        android:max="100"
        android:layout_gravity="center"
        android:visibility="invisible"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OR SignUp here "
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_margin="16dp"
        android:textSize="15sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signup"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        android:id="@+id/SignUp"
        android:textSize="20sp"/>
</LinearLayout>
</ScrollView>
<com.google.android.material.navigation.NavigationView
android:layout_width="wrap_content"
android:layout_height="match_parent"
    android:id="@+id/nav_view"
android:layout_gravity="start"
app:itemTextColor="#ffa500"
app:headerLayout="@layout/lgoamal"
app:menu="@menu/navigation_menu" />
    </androidx.drawerlayout.widget.DrawerLayout>